[tool.poetry]
name = "transit-access"
version = "0.1.0"
description = "GTFS-based transit accessibility scores"
authors = ["Florian Nachtigall <nachtigall@tu-berlin.de>"]
readme = "README.md"
packages = [{include = "transitaccess"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
pandas = "^2.0.3"
geopandas = "^0.13.2"
h3pandas = "^0.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
